--- a/avishkar/style.css
+++ b/avishkar/style.css
@@ -3,7 +3,7 @@ body
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: url(background.jpg);
+    background: url(background3.jpeg);
     background-size: cover;
     
 }
